# run-logger

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md  index.rst
run_logger/: __init__.py  create_sweep.py  hasura_logger.py  haura_logger.py  jsonlines_logger.py  logger.py  main.py  params.py  run.py  sweep.py
src/run_logger/: __init__.py  haura_logger.py  jsonlines_logger.py  logger.py
