[tool.poetry]
name = "run-logger"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.0"
gql = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipdb = "^0.13.9"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
