[metadata]
name = run-logger-ethanabrooks
version = 0.0.1
author = Ethan Brooks
author_email = ethanabrooks@gmail.com
description = Interface for interacting with Hasura database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ethanabrooks/run-logger
project_urls =
    Bug Tracker = https://github.com/ethanabrooks/run-logger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src